--- a/nationalpark/scss/_small.scss
+++ b/nationalpark/scss/_small.scss
@@ -113,7 +113,7 @@ main{
     section{
       padding: 1rem 0;
       background-color: $lightColor;
-      color: white;
+      color: black;
       border-top-left-radius: $cbr - 1;
       border-top-right-radius: $cbr - 1;
     }// end of section
